--- a/css/common.css
+++ b/css/common.css
@@ -797,7 +797,7 @@ li svg {
 
 
 .ft-main-item {
-	min-width: 60rem;
+	min-width: 36rem;
 	padding-bottom: 30px;
 }
 
@@ -806,7 +806,7 @@ svg {
 }
 
 .side {
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	width: 24%;
 	padding: 0 30px;
 	min-width: 280px;
@@ -1104,8 +1104,8 @@ main .set>div .img {
 @media only screen and (min-width: 1240px) {
 
 	.ft-main {
-		justify-content: space-evenly;
-		max-width: fit-content;
+		justify-content: space-between;
+		max-width: 1240px;
 	}
 
 	footer .links {
